🐛 Fix § section/collapse indicators

--- a/src/fragments/_00-stylesettings.scss
+++ b/src/fragments/_00-stylesettings.scss
@@ -16,6 +16,12 @@ settings:
     type: class-toggle
     default: false
   -
+    id: ebullientworks-nix-heading-marker
+    title: Suppress/Remove leading § from headings
+    description: Set this to true to remove the § from headings in reading mode
+    type: class-toggle
+    default: false
+  -
     id: ebullientworks-reverse-view-header-actions
     title: View header actions to the left
     description: Set this to true if the view header is visible, and you want the controls on the left side
